# vehicle-Dynamics-Sim-Can

./: .gitignore  CMakeLists.txt  README.md  build.sh  can_comprehensive_diagnostic.sh  can_result.txt  run_closed_loop_influx.sh  run_instructions.txt  sensor_analysis.py  sim_out.csv  sim_out.txt  sim_plotter.py  structure.txt  verify-influx.sh
.github/workflows/: cmake-CI-pipeline.yml  cmake-multi-platform.yml
config/: can_map.csv  create_service_vcan_example.service  set-upvcan0.sh  wsl_can_set_up.sh
config/lua/: json.lua  scenario.lua
config/scenarios/: 15ms_obstacle.json  brake_test.json  constant_radius.json  full_power.json  heavy_truck_test.json  lane_change.json  obstacle_avoidance.json  performance_ev_test.json  s_curve.json  scenario.md  slalom.json
config/vehicles/: default.yaml  heavy_truck.yaml  performance_ev.yaml
docs/: ARCHITECTURE.md  REFACTOR_PLANT_STATE_PACKER.md  SENSOR_SYSTEM.md  VEHICLE_DYNAMICS.md  sensor_architecture_sim.md
figures/: EV_complete_sim_slalom.eps
src/can/: CMakeLists.txt  actuator_cmd_decoder.cpp  actuator_cmd_decoder.hpp  can_codec.cpp  can_codec.hpp  can_map.cpp  can_map.hpp  sensor_state_packer.hpp  socketcan_iface.cpp  socketcan_iface.hpp  tx_scheduler.cpp  tx_scheduler.hpp  vcan_listener.cpp  vcan_random_sender.cpp
src/config/: CMakeLists.txt  vehicle_config.cpp  vehicle_config.hpp
src/plant/: CMakeLists.txt  README.md  REFACTOR_PHYSICS_SUBSYSTEM.md  battery_plant.cpp  battery_plant.hpp  battery_subsystem.cpp  battery_subsystem.hpp  drive_plant.cpp  drive_plant.hpp  drive_subsystem.cpp  drive_subsystem.hpp  physics_subsystem.hpp  plant_model.cpp  plant_model.hpp  plant_state.hpp  plant_state_visitor.hpp  steer_plant.cpp  steer_plant.hpp  steer_subsystem.cpp  steer_subsystem.hpp  subsystem_manager.cpp  subsystem_manager.hpp  vehicle_bicycle_ackermann.cpp  vehicle_bicycle_ackermann.hpp
src/sensors/: battery_sensor.hpp  gnss_sensor.hpp  imu_sensor.hpp  radar_sensor.hpp  sensor_bank.hpp  sensor_base.hpp  sensor_out.hpp  sensors_guide.md  wheel_sensor.hpp
src/sim/: CMakeLists.txt  actuator_cmd.hpp  lua_runtime.cpp  lua_runtime.hpp  plant_state_packer.cpp  plant_state_packer.hpp  sim_app.cpp  sim_app.hpp  sim_main.cpp  timing_controller.hpp
test/: CMakeLists.txt  test_can_codec.cpp  test_influx_client.cpp  test_plant_state_packer.cpp  test_sensor_packer.cpp  test_subsystem_manager.cpp  test_vehicle_config.cpp
utils/: CMakeLists.txt  bitpack.cpp  bitpack.hpp  csv.hpp  influx.cpp  influx.hpp  logging.hpp  noise.hpp
